--- a/index.html
+++ b/index.html
@@ -1,47 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="css/style.css">
-  <title>Trabajo1Simon</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Trabajo1Simon</title>
 </head>
+
 <body>
-<!-- 
-<header>
-    <nav class="navbar barranav navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <h1>TiendaJS</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+
+    <header>
+        <nav class="navbar barranav navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <h1>TiendaJS</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container-fluid titulogaleria">
+        <h1>Galeria de productos</h1>
+        <p>Pequeña seccion de productos destacados y sus precios</p>
+    </div>
+
+    <div class="container">
+        <div class="row contenedorcards">
+            <div class="card col-sm-10 col-md-3">
+                <img src="img/fotoaceite.jpg" class="card-img-top" alt="Foto de aceite natural">
+                <div class="card-body">
+                    <h5 class="card-title">Aceites Naturales a base de hierbas</h5>
+                    <p class="card-text">Aceite para tu rutina facial diaria.</p>
+                    <a class="btn btn-primary" onclick="">Comprar</a>
+                </div>
+            </div>
+            <div class="card col-sm-10 col-md-3">
+                <img src="img/fotoshampoo.jpg" class="card-img-top" alt="Foto Shampoo Solido">
+                <div class="card-body">
+                    <h5 class="card-title">Shampoo Solido</h5>
+                    <p class="card-text">Shampoo Solido con hierbas nutritivas </p>
+                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
+                </div>
+            </div>
+            <div class="card col-sm-10 col-md-3">
+                <img src="img/fotovela.jpg" class="card-img-top" alt="Foto Vela aromatica frutal">
+                <div class="card-body">
+                    <h5 class="card-title">Vela aromatica</h5>
+                    <p class="card-text">Vela aromatica con olores frutales.</p>
+                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
+                </div>
+            </div>
+            <div class="card col-sm-10 col-md-3">
+                <img src="img/fotojabon.jpg" class="card-img-top" alt="Foto jabon natural">
+                <div class="card-body">
+                    <h5 class="card-title">Jabon Natural</h5>
+                    <p class="card-text">Jabon bajo en contenido graso para piel sensible.</p>
+                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
                 </div>
             </div>
         </div>
-    </nav>
-</header>
+    </div>
 
-<div class="container-fluid galeriaprod">
-  <div class="container titulogaleria">
-    <h1>Galeria de productos</h1>
-    <p>Pequeña seccion de productos destacados y sus precios</p>
-  </div>
-  <div class="container-fluid">
-
-  </div>
-</div> -->
+    <div class="carrito">
+        <h2>Tu carrito</h2>
+    </div>
 
 
-  <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
