--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Aceites Naturales a base de hierbas</h5>
                     <p class="card-text">Aceite para tu rutina facial diaria.</p>
-                    <a class="btn btn-primary" onclick="">Comprar</a>
+                    <a class="btn btn-primary" >Comprar</a>
                 </div>
             </div>
             <div class="card col-sm-10 col-md-3">
@@ -53,7 +53,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Shampoo Solido</h5>
                     <p class="card-text">Shampoo Solido con hierbas nutritivas </p>
-                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
+                    <a class="btn btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card col-sm-10 col-md-3">
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Vela aromatica</h5>
                     <p class="card-text">Vela aromatica con olores frutales.</p>
-                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
+                    <a class="btn btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card col-sm-10 col-md-3">
@@ -69,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Jabon Natural</h5>
                     <p class="card-text">Jabon bajo en contenido graso para piel sensible.</p>
-                    <a class="btn btn-primary" onclick="add(producto)">Comprar</a>
+                    <a class="btn btn-primary">Comprar</a>
                 </div>
             </div>
         </div>
